# presta_client

./: .gitignore  README.md  check.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish.yml  test-and-build.yml
prestashop_orders_client/: __init__.py  client.py  exceptions.py  parser.py  utils.py
tests/: test_client.py  test_parser.py  test_utils.py
