[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependencies]
requests = ">=2.28.1"
xmltodict = ">=0.13.0"

[project]
name = "prestashop_orders_client"
version = "0.0.2"
authors = [
    {name = "Aleksandr Zakharov", email = "aleksza.4119@gmail.com"},
]
description = "A simple Python client for PrestaShop API to extract orders"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]

[python]
version = ">=3.10"

[project.urls]
homepage = "https://github.com/vernon-gant/prestashop_orders_client"
bug-tracker = "https://github.com/vernon-gant/prestashop_orders_client/issues"
source = "https://github.com/vernon-gant/prestashop_orders_client"
